Fixed spacing

--- a/Public/css/custom.css
+++ b/Public/css/custom.css
@@ -317,5 +317,5 @@ table.table tr {
 
 .col-md-12 {
     width: 100%;
-    margin: 0px;
+    margin: 0px 0px 20px 0px;
 }
